nullaway_error_82984287-FEC9-4182-913F-297526DF825F.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/function/client/DefaultClientResponseBuilder.java:261: error: [NullAway] dereferenced expression this.originalResponse is @Nullable
			return (this.headers != null ? this.headers : this.originalResponse.headers().asHttpHeaders());
			                                                                   ^
    (see http://t.uber.com/nullaway )
